Fixed the space below h1 element being too big

--- a/Wiimmfi/Refresh/Core.css
+++ b/Wiimmfi/Refresh/Core.css
@@ -153,5 +153,5 @@ h1.narrow {
 }
 
 .table11 {
-    margin-top: -285px;
+    margin-top: -300px;
 }
